# pear-backend

./: .gitignore  README.md  db.sqlite3  manage.py  package-lock.json  pyproject.toml  requirements.txt
api/: admin.py  models.py  serializers.py  signals.py  tests.py
api/migrations/: 0001_initial.py  0002_chat_message.py
api/urls/: order_urls.py  product_urls.py  user_urls.py
api/views/: order_views.py  product_views.py  user_views.py
pear_project/: asgi.py  settings.py  urls.py  wsgi.py
